--- a/20180929_minkalab.md
+++ b/20180929_minkalab.md
@@ -1,9 +1,10 @@
 # Experimentos espaciales
 
-El exp
+Proponemos una serie de experiencias para definir nuestro lugar en el Universo.
+La actividad se divide en dos partes. 
+La primera trata de experimentación con el tiempo, el espacio y nuestros sentidos;
+mientras que segunda es una conversación sobre la relación entre estos experimentos y los descubrimientos, mediciones y propuestas de la cosmología contemporánea.
 
-Proponemos una serie de experiencias para ubicarnos en el Universo.
-Una primera parte vamos a experimentar con el tiempo, el espacio y nuestros sentidos.
 
 Lugar: Minkalab, Risaralda, Colombia
 Fecha: Septiembre 29, 2018
