--- a/20180929_minkalab.md
+++ b/20180929_minkalab.md
@@ -3,7 +3,7 @@
 Proponemos una serie de experiencias para sentir nuestro lugar en el Universo.
 La actividad se divide en dos partes. 
 La primera trata de experimentación con el tiempo, el espacio y nuestros sentidos;
-mientras que segunda es una conversación sobre la relación entre estos experimentos y los descubrimientos, mediciones y propuestas de la cosmología contemporánea.
+mientras que segunda es una conversación sobre la relación entre estos experimentos y los descubrimientos, mediciones y propuestas de la cosmología física del siglo XXI.
 
 
 Lugar: Minkalab, Risaralda, Colombia
